--- a/templates/libraries/okhttp-gson/ApiClient.mustache
+++ b/templates/libraries/okhttp-gson/ApiClient.mustache
@@ -24,6 +24,7 @@ import org.apache.oltu.oauth2.client.request.OAuthClientRequest.TokenRequestBuil
 import org.apache.oltu.oauth2.common.message.types.GrantType;
 {{/hasOAuthMethods}}
 
+import com.google.gson.reflect.TypeToken;
 import javax.net.ssl.*;
 import java.io.File;
 import java.io.IOException;
@@ -53,6 +54,7 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.io.*;
 
+import {{invokerPackage}}.AccessToken;
 import {{invokerPackage}}.auth.Authentication;
 import {{invokerPackage}}.auth.HttpBasicAuth;
 import {{invokerPackage}}.auth.HttpBearerAuth;
@@ -94,6 +96,8 @@ public class ApiClient {
     private String conjurVersion = System.getenv().getOrDefault("CONJUR_VERSION", "5");
     private String certFile = System.getenv().getOrDefault("CONJUR_CERT_FILE", null);
     private String sslCert = System.getenv().getOrDefault("CONJUR_SSL_CERTIFICATE", null);
+    private String apiKey = System.getenv().getOrDefault("CONJUR_AUTHN_API_KEY", null);
+    private boolean autoUpdateAccessToken = System.getenv().getOrDefault("CONJUR_AUTO_UPDATE_TOKEN", "false").toLowerCase().equals("true");
 
     public String getAccount() {
         return account;
@@ -148,7 +152,7 @@ public class ApiClient {
         // Setup authentications (key: authentication name, value: authentication).{{#authMethods}}{{#isBasic}}{{#isBasicBasic}}
         authentications.put("{{name}}", new HttpBasicAuth());{{/isBasicBasic}}{{^isBasicBasic}}
         authentications.put("{{name}}", new HttpBearerAuth("{{scheme}}"));{{/isBasicBasic}}{{/isBasic}}{{#isApiKey}}
-        authentications.put("{{name}}", new ApiKeyAuth({{#isKeyInHeader}}"header"{{/isKeyInHeader}}{{#isKeyInQuery}}"query"{{/isKeyInQuery}}{{#isKeyInCookie}}"cookie"{{/isKeyInCookie}}, "{{keyParamName}}"));{{/isApiKey}}{{#isOAuth}}
+        authentications.put("{{name}}", new ApiKeyAuth({{#isKeyInHeader}}"header"{{/isKeyInHeader}}{{#isKeyInQuery}}"query"{{/isKeyInQuery}}{{#isKeyInCookie}}"cookie"{{/isKeyInCookie}}, "{{keyParamName}}", new AccessToken()));{{/isApiKey}}{{#isOAuth}}
         authentications.put("{{name}}", new OAuth());{{/isOAuth}}{{/authMethods}}
         // Prevent the authentications from being modified.
         authentications = Collections.unmodifiableMap(authentications);
@@ -1358,10 +1362,44 @@ public class ApiClient {
             Authentication auth = authentications.get(authName);
             if (auth == null) {
                 throw new RuntimeException("Authentication undefined: " + authName);
+            } else if (authName == "conjurAuth" && ((ApiKeyAuth)auth).getAccessToken().needsRefresh() && canRefreshAccessToken()) {
+                AccessToken newToken = this.getNewAccessToken();
+                ((ApiKeyAuth)auth).setAccessToken(newToken);
             }
             auth.applyToParams(queryParams, headerParams, cookieParams);
         }
     }
+
+    public boolean canRefreshAccessToken() {
+        return apiKey != null && account != null && username != null && autoUpdateAccessToken;
+    }
+
+    public String getAuthenticationUrl() {
+        String auth = System.getenv().getOrDefault("CONJUR_AUTHN_URL", "/authn");
+        return auth;
+    }
+
+    public AccessToken getNewAccessToken() {
+        //NOTE: We cannot use the AuthenticationApi class here because it would create a circular dependancy
+        String path = String.format("%s/%s/%s/authenticate", getAuthenticationUrl(), account, username);
+        String method = "POST";
+        String body = apiKey;
+        Map<String, String> headerParams = new HashMap<String, String>();
+        headerParams.put("Accept-Encoding", "base64");
+        headerParams.put("Content-Type", "text/plain");
+        headerParams.put("X-Request-Id", "testingid");
+        String accessToken = null;
+        try {
+            Call c = this.buildCall(path, method, new ArrayList<Pair>(), new ArrayList<Pair>(), body, headerParams, new HashMap<String, String>(), new HashMap<String, Object>(), new String[]{}, null);
+            ApiResponse<String> response = execute(c, new TypeToken<String>(){}.getType());
+            accessToken = response.getData();
+        } catch (ApiException e) {
+            System.out.println("Failed to automatically update AccessToken");
+            return null;
+        }
+        return AccessToken.fromEncodedToken(accessToken);
+    }
+
 
     /**
      * Build a form-encoding request body with the given form parameters.
