Made authorization prefix "Token" by default
Also added getter/setter for certificate file name

--- a/templates/libraries/okhttp-gson/ApiClient.mustache
+++ b/templates/libraries/okhttp-gson/ApiClient.mustache
@@ -472,6 +472,13 @@ public class ApiClient {
         this.password = password;
     }
 
+    public void setCertFile(String filename) {
+        certFile = filename;
+    }
+
+    public String getCertFile() {
+        return certFile;
+    }
 
     /**
      * Sets the value of the API key for this class
