Lowered logging level to prevent data leaks

--- a/templates/libraries/okhttp-gson/ApiClient.mustache
+++ b/templates/libraries/okhttp-gson/ApiClient.mustache
@@ -578,7 +578,7 @@ public class ApiClient {
         if (debugging != this.debugging) {
             if (debugging) {
                 loggingInterceptor = new HttpLoggingInterceptor();
-                loggingInterceptor.setLevel(Level.BODY);
+                loggingInterceptor.setLevel(Level.BASIC);
                 httpClient = httpClient.newBuilder().addInterceptor(loggingInterceptor).build();
             } else {
                 httpClient.interceptors().remove(loggingInterceptor);
