--- a/templates/libraries/okhttp-gson/pom.mustache
+++ b/templates/libraries/okhttp-gson/pom.mustache
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>{{groupId}}</groupId>
+    <groupId>com.cyberark</groupId>
     <artifactId>{{artifactId}}</artifactId>
     <packaging>jar</packaging>
     <name>{{artifactId}}</name>
-    <version>{{artifactVersion}}</version>
+    <version>4.0.0</version>
     <url>{{artifactUrl}}</url>
     <description>{{artifactDescription}}</description>
     <scm>
