--- a/templates/libraries/okhttp-gson/pom.mustache
+++ b/templates/libraries/okhttp-gson/pom.mustache
@@ -5,7 +5,9 @@
     <artifactId>{{artifactId}}</artifactId>
     <packaging>jar</packaging>
     <name>{{artifactId}}</name>
-    <version>4.0.0</version>
+    <!-- Only bump version number,
+    SNAPSHOT is automatically removed during release deployments -->
+    <version>4.0.0-SNAPSHOT</version>
     <url>{{artifactUrl}}</url>
     <description>{{artifactDescription}}</description>
     <scm>
