--- a/templates/libraries/okhttp-gson/ApiClient.mustache
+++ b/templates/libraries/okhttp-gson/ApiClient.mustache
@@ -50,6 +50,7 @@ import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.Map.Entry;
 import java.util.concurrent.TimeUnit;
+import java.util.logging.Logger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.io.*;
@@ -68,6 +69,7 @@ import {{invokerPackage}}.auth.OAuthFlow;
 
 public class ApiClient {
 
+    private static final Logger LOGGER = Logger.getLogger(ApiClient.class.getName());
     private String basePath = System.getenv().getOrDefault("CONJUR_APPLIANCE_URL", "{{{basePath}}}");
     private boolean debugging = false;
     private Map<String, String> defaultHeaderMap = new HashMap<String, String>();
@@ -1410,7 +1412,7 @@ public class ApiClient {
             ApiResponse<String> response = execute(c, new TypeToken<String>(){}.getType());
             accessToken = response.getData();
         } catch (ApiException e) {
-            System.out.println("Failed to automatically update AccessToken");
+			LOGGER.log(java.util.logging.Level.SEVERE, "Error encountered while updating AccessToken. Error code: " + e.getCode() +  ", Error Message:" + e.getMessage() + ", Error Body:" + e.getResponseBody(), e);
             return null;
         }
         return AccessToken.fromEncodedToken(accessToken);
@@ -1566,3 +1568,4 @@ public class ApiClient {
         }
     }
 }
+
