--- a/templates/libraries/okhttp-gson/pom.mustache
+++ b/templates/libraries/okhttp-gson/pom.mustache
@@ -189,8 +189,9 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>7.1.1</version>
+                <version>7.4.4</version>
                 <configuration>
+                    <cveDownloadWait>20000</cveDownloadWait>
                     <failBuildOnCVSS>7</failBuildOnCVSS>
                 </configuration>
                 <executions>
