--- a/templates/libraries/okhttp-gson/pom.mustache
+++ b/templates/libraries/okhttp-gson/pom.mustache
@@ -184,24 +184,6 @@
                 </executions>
             </plugin>
 
-            <!-- Example configurations for owasp dependency scanner: https://jeremylong.github.io/DependencyCheck/dependency-check-maven/
-                Includes examples of passing false positive results-->
-            <plugin>
-                <groupId>org.owasp</groupId>
-                <artifactId>dependency-check-maven</artifactId>
-                <version>11.1.1</version>
-                <configuration>
-                    <cveDownloadWait>20000</cveDownloadWait>
-                    <failBuildOnCVSS>7</failBuildOnCVSS>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -461,6 +443,11 @@
             <version>4.6.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+			<groupId>org.owasp</groupId>
+			<artifactId>dependency-check-plugin</artifactId>
+			<version>12.1.0</version>
+		</dependency>
     </dependencies>
     <properties>
         <java.version>{{#supportJava6}}1.6{{/supportJava6}}{{^supportJava6}}{{#java8}}1.8{{/java8}}{{^java8}}1.7{{/java8}}{{/supportJava6}}</java.version>
